--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lneedy/postcss-salad",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "description": "webpack 4.0 沙拉是一个能够帮助你更加写出更加简洁、优雅的CSS的样式解决方案。",
   "main": "lib/index.js",
   "scripts": {
@@ -10,20 +10,28 @@
     "prepublish": "npm run babelify"
   },
   "dependencies": {
+    "@lneedy/saladcss-bem": "0.0.3",
     "autoprefixer": "^9.0.0",
     "caniuse-api": "^1.3.2",
     "chalk": "^1.1.1",
     "pixrem": "^3.0.0",
     "postcss": "^7.0.0",
+    "postcss-calc": "^7.0.1",
+    "postcss-color-function": "^4.1.0",
+    "postcss-custom-properties": "^9.0.2",
+    "postcss-initial": "^3.0.1",
+    "postcss-inline-svg": "^4.0.0",
     "postcss-neat": "^2.5.2",
+    "postcss-partial-import": "^4.1.0",
     "postcss-pseudo-class-any-link": "^1.0.0",
     "postcss-sass-color-functions": "^1.1.0",
+    "postcss-scss": "^2.0.0",
     "postcss-shape": "^0.0.1",
+    "postcss-short": "^5.0.0",
     "postcss-utils": "^1.0.1",
     "precss": "^4.0.0"
   },
   "devDependencies": {
-    "@lneedy/saladcss-bem": "0.0.3",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
     "babel-loader": "^6.2.4",
@@ -31,14 +39,6 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "eslint": "^1.7.3",
-    "postcss-calc": "^7.0.1",
-    "postcss-color-function": "^4.1.0",
-    "postcss-css-reset": "^1.0.2",
-    "postcss-initial": "^3.0.1",
-    "postcss-inline-svg": "^4.0.0",
-    "postcss-partial-import": "^4.1.0",
-    "postcss-scss": "^2.0.0",
-    "postcss-short": "^5.0.0",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.2",
     "to-slug-case": "^1.0.0"
