--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@lneedy/postcss-salad",
-  "version": "1.2.1",
+  "version": "1.2.7",
   "description": "webpack 4.0 沙拉是一个能够帮助你更加写出更加简洁、优雅的CSS的样式解决方案。",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run babelify && npm run tape",
+    "test:tape": "npm run babelify && npm run tape",
+    "test:s": "npm run babelify &&  cross-env NODE_ENV=SIGHT node lib/test/index.js",
+    "test:a": "npm run babelify && cross-env NODE_ENV=ALL node lib/test/index.js",
+    "test": "npm run test:a",
+    "test:at": "npm run babelify && cross-env NODE_ENV=TAPALL node lib/test/index.js",
+    "test:st": "npm run babelify && cross-env NODE_ENV=TAPSIGHT node lib/test/index.js",
     "tape": "tape lib/test/index.js | tap-spec",
     "babelify": "babel src --out-dir lib",
     "prepublish": "npm run babelify"
@@ -21,6 +26,7 @@
     "postcss-custom-properties": "^9.0.2",
     "postcss-initial": "^3.0.1",
     "postcss-inline-svg": "^4.0.0",
+    "postcss-mixins": "^6.2.2",
     "postcss-neat": "^2.5.2",
     "postcss-partial-import": "^4.1.0",
     "postcss-pseudo-class-any-link": "^1.0.0",
@@ -38,9 +44,10 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
+    "cross-env": "^6.0.3",
     "eslint": "^1.7.3",
     "tap-spec": "^4.1.0",
-    "tape": "^4.2.2",
+    "tape": "^4.11.0",
     "to-slug-case": "^1.0.0"
   },
   "babel": {
