--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "cross-env": "^6.0.3",
     "eslint": "^1.7.3",
+    "postcss-conditionals": "^2.1.0",
     "tap-spec": "^4.1.0",
     "tape": "^4.11.0",
     "to-slug-case": "^1.0.0"
